문제 정리중

--- a/기출문제/기출문제1.md
+++ b/기출문제/기출문제1.md
@@ -136,3 +136,82 @@ h 또는 ?	도움말 표시.
 - ps -elf 에 대해
 - 좀비프로세스란?
 
+34. rpm 옵션 질문
+-V 옵션 : 검증 수행
+예를 들어 rpm -V httpd
+S.5....T.  c /etc/httpd/conf/httpd.conf --> 이렇게 결과가 나오는데 의미는
+- S는 파일의 크기(Size)가 변경되었음을 의미합니다.
+- .(점)은 해당 속성이 변경되지 않았음을 의미합니다.
+- 5는 MD5 해시가 변경되었음을 나타냅니다.
+- T는 파일의 수정 시간(Time)이 변경되었음을 나타냅니다.
+- c는 해당 파일이 구성 파일임을 나타냅니다.
+
+qa : 전체 패키지
+qi : 설치된 패키지의 정보 확인
+qip : rpm 파일의 상세정보 확인
+qf : 특정 파일을 설치한 패키지명 확인
+
+35. 패키지를 설치하지 않고 다운로드 할 수 있는 명령어
+yumdownloader sendmail
+
+36. rpm의 qf와 비슷한 기능을 하는 dpkg 의 옵션이라....
+l : 설치된 패키지 목록
+L : 지정한 패키지의 설치된 파일 목록
+s : 지정한 패키지의 정보
+S : 지정한 파일이 포함된 패키지 검색
+i : 지정한 파일 설치 혹은 업그레이드
+r : 패키지 삭제, 파일은 유지
+P : 패키지와 파일 모두 삭제
+
+37. tar 명령어 옵션
+파일을 압축하거나 압축된 파일을 해제할 떄 쓰는 명령어
+기본옵션
+A : 기존 압축파일에 tar 파일 추가
+c : 새로운 파일 만들기
+d : 기존 파일과의 차이
+r : 기존 파일에 마지막 파일 추가
+t : 압축된 파일 목록 출력
+u : 압축된 파일과 비교하여 최신날짜일 경우 업데이트
+x : 압축해제
+
+부가옵션
+v : 진행중인 파일 표시
+f : 파일명 지정
+z : gzip
+j : bzip2
+J : xz
+
+.Z 확장자는 없음...
+
+39. groupmod 명령어 : 그룹명이나 GID를 변경할 떄 사용하는 명령어
+n : 그룹명 변경
+g : GID 변경 
+
+41. dev 디렉토리의 구조
+파일유형 c : 캐릭터 디바이스
+파일유형 b : 블록 디바이스
+데이터 처리 관점의 차이가 있음 -> 캐릭터 디바이슨는 바이트 단위 연속적인 접근, 블록 디바이스는 블록단위로 데이터 처리하고 파일 시스템을 통해 데이터를 캐시하여 성능 최적화 가능
+
+sp0 : 직렬포트
+sg0 : generic 디바이스
+sr0 : sata 기반의 CD/DVD 드라이브
+lp0 : 병렬포트 프린터
+
+44. lspci : pci장치 리스트 보여주는 명령어 pci란 메인보드에 장착되는 주변장치
+lsmod : 커널에 적재된 모듈으ㅢ 모듈명, 크기, 다른 모듈에서 사용중인 수, 사용중인 모듈 순으로 출력 -> 모듈 출력 명령어
+lsblk : 블록장치 출력 명령어
+
+45. 리눅스는 시스템 관련된 내용을 잘 몰라도 사용한느데 문제가 없도로 개발되어있음
+그 중 하나가 커널에서 하드웨어를 발견시 필요한 모듈을 자동적재하는 기능임
+적재는 모듈유틸리티인 modprobe 프로그램과 관계가 있음
+
+modprobe는 /etc/modprobe.conf 에서 모듈 정보를 얻어 차례대로 등록.
+-a, --all : 적재
+-l, --list : 리스트
+-c, --showconfig : 설정보기
+-r, --remove : 삭제
+
+46. CUPS란 인쇄 요청 클라이언트와 인쇄 처리를 위한 프린트 서버로 구성되어있는 프린팅 시스템
+HTTP 기반 IPP 프로토콜 사용, SMB 프로토콜도 사용(삼바가 설치되어있으면 프린트 공유가능하다는 얘기)
+인터넷으로 연결된 프린트에 접근할 떄는 631 포트 사용
+
